Fixed element alignment with top of page

--- a/pitscout/src/components/main-page/MainPage.scss
+++ b/pitscout/src/components/main-page/MainPage.scss
@@ -14,7 +14,7 @@
 		width: 192px;
 		height: 100vb;
 		max-height: 100%;
-		padding: 16px;
+		padding: 24px 16px 16px 16px;
 		overflow-y: auto;
 	}
 
@@ -25,7 +25,7 @@
 		overflow-y: auto;
 		max-height: 100%;
 		width: fit-content;
-		padding: 32px 16px 16px 0;
+		padding: 24px 16px 16px 0;
 
 		.title-area {
 			display: flex;
